# django-ecommerce

./: pyproject.toml
core/: views.py
djecommerce/settings/: development.py
