[tool.poetry]
name = "django-ecommerce"
version = "0.2.0"
description = ""
authors = ["Bertrand Pechenot <bertrand.pechenot@gmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{ include = "django_ecommerce" }]

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.2.1"
certifi = "2019.3.9"
chardet = "5.1.0"
defusedxml = "0.7.1"
django-allauth = "0.54.0"
django-countries = "7.5.1"
django-crispy-forms = "2.0"
django-debug-toolbar = "4.1.0"
idna = "3.4"
oauthlib = "3.2.2"
Pillow = "9.5.0"
python-decouple = "3.8"
python3-openid = "3.1.0"
pytz = "2023.3"
requests = "2.31.0"
requests-oauthlib = "1.3.1"
stripe = "5.4.0"
urllib3 = "2.0.2"
black = "23.3.0"
flake8 = "6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
